syntax = "proto3";
package pb;
//import "google/protobuf/timestamp.proto";


service Users {
    rpc NewUser (NewUserRequest) returns (NewUserResponse) {
    }
    rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse){
    }
}

message NewUserRequest {
    string Name = 1;
    string LastName = 2;
    string Email = 3;
    string Password = 4;
    string Role = 5;
}

message NewUserResponse {
    string Id = 1;
    string Err = 2;
}

message GetUserByEmailRequest {
    string Email = 1;
}

message GetUserByEmailResponse {
    User user = 1;
    string Err = 2;
}

message User {
    string Id = 1;
    string Name = 2;
    string LastName = 3;
    string Email = 4;
    string Role = 5;
}
